# music_bot

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
app/runners/: app.py
app/services/: healthcheck.py
app/services/crud/: user.py
app/telegram/helpers/: messages.py
app/utils/: key_builder.py
scripts/: deploy.sh
systemd/: music-bot.service.example
tests/: README.md  conftest.py
tests/e2e/: test_bot.py
tests/integration/: test_handlers.py  test_workflows.py
tests/unit/: test_models.py  test_services.py  test_utils.py
