[project]
name = "nnican_music_bot"
authors = [{ name = "", email = "work@nnican.ru" }]
version = "1.0"
description = "Aiogram 3.x bot template using PostgreSQL (asyncpg) with SQLAlchemy + alembic"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram>=3.23.0,<4.0.0",
    "aiogram-contrib>=1.1.4,<2.0.0",
    "aiogram-i18n>=1.4,<2.0.0",
    "aiohttp~=3.13.2",
    "alembic>=1.14.0,<2.0.0",
    "asyncpg~=0.31.0",
    "fastapi>=0.125.0,<1.0.0",
    "fluent-runtime>=0.4.0,<1.0.0",
    "greenlet>=3.3.0,<4.0.0",
    "msgspec>=0.20.0,<1.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings[yaml]>=2.12.0,<3.0.0",
    "redis~=7.1.0",
    "sqlalchemy~=2.0.45",
    "uvicorn>=0.38.0,<1.0.0",
]

[project.urls]
Repository = "https://github.com/NnicanBuak/music_bot.git"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0", 
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aiosqlite>=0.19.0",
    "ftl-extract>=0.8.0",
    "mypy>=1.13.0,<1.14", 
    "ruff>=0.8.6"
]

[tool.black]
line-length = 99
exclude = "\\.?venv|\\.?tests"

[tool.ruff]
target-version = "py312"
line-length = 130
lint.select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]
lint.ignore = ["N805"]
exclude = [".venv", ".idea"]
[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
exclude = ["venv", ".venv", ".idea", ".tests", "tests"]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["app.telegram.handlers.*"]
strict_optional = false
warn_return_any = false
disable_error_code = ["union-attr"]
